# aqi_pm25_facilities

./: .pythonrc  LICENSE  README.md  launch_jupyter.sh  pyproject.toml
src/aqi_pm25_facilities/data/processed/: pm25_aqi_by_facility.csv  pm25_aqi_by_facility.geojson
src/aqi_pm25_facilities/data/source/: hourly_obs.csv
src/aqi_pm25_facilities/notebooks/: aqi_notebook.ipynb
src/aqi_pm_25_facilities/data/processed/: pm25_aqi_by_facility.csv  pm25_aqi_by_facility.geojson
src/aqi_pm_25_facilities/data/source/: pmfine_060723_Peak.obs
src/aqi_pm_25_facilities/notebooks/: aqi_notebook.ipynb
src/data/processed/: pm25_aqi_by_facility.geojson
