[tool]
[tool.poetry]
name = "aqi_pm25_facilities"
version = "0.1.0"
homepage = "https://github.com/the-appeal/"
description = "Data and code for calculating PM2.5 AQIs at carceral facilities"
authors = ["Alleen Brown <alleen.brown56@gmail.com>", "Ethan Corey <ethan.corey@theappeal.org>"]
readme = "README.md"
classifiers=[
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10',
]
packages = [
    { include = "aqi_pm_25_facilities", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
jupyter = "^1.0.0"
pandas = "^1.5.0"
geopandas = "^0.11.1"
requests = "^2.28.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
